--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>At the Fish Houses</title>
+
+  <style>
+    body  {
+      margin: 0;
+      padding:  0;
+      background-color:  black;
+    }
+  </style>
 </head>
 <body>
   
