--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       margin: 0;
       padding:  0;
       background-color:  black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   </style>
 </head>
